--- a/CSS/view.css
+++ b/CSS/view.css
@@ -102,7 +102,8 @@ thead{
 }
 
 .circular-landscape { 
-    position: relative; 
+    display: flex;
+    justify-content: center;
     width: 200px; 
     height: 200px; 
     overflow: hidden; 
@@ -110,8 +111,10 @@ thead{
 
 } 
 .circular-landscape img {
+    text-align: center;
     width: auto; 
     height: 100%; 
+  
 }
 .InfoCard{
     width:50%;
